# Phtoon-w-zastosowaniach-naukowych

./: pyproject.toml  test.py
Lab10/: lab10.py  pyproject.toml
Lab11/: lab11.py
Lab9/: lab9.ipynb  pyproject.toml
lab2/: lab2.py  pyproject.toml
lab3/lab3/: pyproject.toml
lab3/lab3/lab3/: lab3.py
lab4/: actual_forum.json  json001.py  lab4.py  pyproject.toml
lab5/: lab5.py  pyproject.toml
lab6/: lab6.py
lab8/: lab8.py  pyproject.toml
