[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
rich = "^12.6.0"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"
ascii-graph = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
