[tool.poetry]
name = "lab6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.1"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
imageio = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
