[tool.poetry]
name = "lab9"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"
numpy = "^1.24.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
bokeh = "^3.0.3"
sympy = "^1.11.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
