[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
imageio = "^2.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
